# Oh-Code-Rag

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: basic_usage.py
mcp/: README.md  server.py
skill/: SKILL.md  skill.json
skill/scripts/: codetree.sh
src/codetree/: __init__.py  cli.py  config.py  core.py  indexer.py  llm.py  parser.py  retriever.py
tests/: __init__.py  test_parser.py
